--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.8.4",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
+    "google-auth-library": "^9.15.1",
+    "google-spreadsheet": "^4.1.4",
     "googleapis": "^129.0.0",
     "moment": "^2.30.1",
     "node-fetch": "^2.7.0"
@@ -30,4 +33,4 @@
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
-} 
+}
