環境変数の設定を更新し、自己Pingサーバーを追加してRenderのスリープ防止機能を実装

--- a/env.example
+++ b/env.example
@@ -11,6 +11,8 @@ GOOGLE_PRIVATE_KEY=your_private_key_here
 # アプリケーション設定
 NODE_ENV=development
 # NODE_ENV=production
+PORT=3000
+SERVER_URL=https://your-render-app-url.onrender.com
 
 # ポイント設定
 DAILY_MESSAGE_POINT=1
